[package]
name = "matplotlib"
version = "0.1.0"
description = "Quick-and-dirty plotting in Rust using Python and Matplotlib"
readme = "README.md"
license = "GNU AGPLv3"
authors = [ "Will Huie <wcwhuie@gmail.com>",]
edition = "2021"
homepage = "https://gitlab.com/whooie/mpl"
repository = "https://gitlab.com/whooie/mpl.git"
keywords = [ "matplotlib", "plotting", "python",]
categories = [ "api-bindings", "graphics", "science", "visualization",]

[dependencies]
rand = "0.8.5"
serde_json = "1.0.120"
thiserror = "1.0.63"

[lib]
path = "lib/lib.rs"
name = "matplotlib"

